--- a/.verb.md
+++ b/.verb.md
@@ -1,4 +1,4 @@
-# {%= name %} {%= badge("fury") %}
+# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
 
 > {%= description %}
 
@@ -9,15 +9,16 @@
 
 ```js
 var firstCommitDate = require('{%= name %}');
+
+firstCommitDate(function(err, date) {
+  if (err) return console.log(err);
+  console.log('first commit!', date);
+});
+//=> first commit! Tue Nov 17 2015 13:29:18 GMT-0500 (EST)
 ```
 
-## API
-<!-- add a path or glob pattern for files with code comments to use for docs  -->
-{%%= apidocs("index.js") %}
-
 ## Related projects
-<!-- add an array of related projects, then un-escape the helper -->
-{%%= related([]) %}  
+{%= related(verb.related.list) %}  
 
 ## Running tests
 {%= include("tests") %}
