--- a/.verb.md
+++ b/.verb.md
@@ -17,6 +17,9 @@ firstCommitDate(function(err, date) {
 //=> first commit! Tue Nov 17 2015 13:29:18 GMT-0500 (EST)
 ```
 
+## API
+{%= apidocs('index.js') %}  
+
 ## Related projects
 {%= related(verb.related.list) %}  
 
